# gpu_architectures_and_computing

./: .gitignore  CMakeLists.txt  GNUmakefile  README
doc/: .gitignore  Makefile  bm_diagrams.ods  presentation.tex  protocol.tex
matlab/: .gitignore  QMITL_Eval2raw.m  alw_tests.m  and_tests.m  balw_tests.m  benchmark1.m  bevtl_tests.m  buntil_tests.m  eventually_tests.m  evtl_tests.m  loadenv.m  not_tests.m  or_tests.m  run_benchmark.sh  run_tests.m  until_tests.m  writeResultFiles.m
matlab/benchmarks/: benchmark.m  bm_result_bellum_20130618_0226.csv  bm_result_bellum_20130618_0237.csv  bm_result_bellum_20130618_0248.csv  bm_result_bellum_20130618_1201.csv  bm_result_bellum_20130618_1207.csv  bm_result_bellum_20130625_2338.csv  bm_result_bellum_20130625_2353.csv  bm_result_bellum_20130626_0006.csv  bm_result_bellum_20130626_0023.csv  bm_result_bellum_20130626_0043.csv  bm_result_bellum_20130626_0044.csv  bm_result_bellum_20130626_0124.csv  bm_result_bellum_20130626_0125.csv  bm_result_bellum_20130626_0131.csv  bm_result_bellum_20130626_0132.csv  createRandomSig.m  createSig1.m  createSig2.m  plotsignals.m  runTestCase.m  testcases
matlab/cuda_impl/: and-test-gpu-result.txt  and-test-result.txt  and-test-sig1.txt  and-test-sig2.txt  and-test2-gpu-result.txt  and-test2-sig2.txt  and_test2-breach-result.txt  and_test2-sig1.txt  benchmark1.m  eventually-test-gpu-result.txt  eventually-test2-breach-result.txt  eventually-test2-gpu-result.txt  eventually-test2-result.txt  eventually-test2-sig.txt  mytest.m  readSignal.m
matlab/traces/: alw_sig05.breach.trace  alw_sig06.breach.trace  and_sig01_sig02.breach.trace  and_sig03_sig04.breach.trace  and_sig03_sig04.gpuac.trace  balw_0.5_1.5_sig05.breach.trace  balw_0.5_1.5_sig06.breach.trace  bevtl_0.5_1.5_sig05.breach.trace  bevtl_0.5_1.5_sig06.breach.trace  buntil_0.5_1.5_sig01_sig02.breach.trace  buntil_0.5_1.5_sig03_sig04.breach.trace  ev_sig05.breach.trace  evtl_sig06.breach.trace  not_sig03.breach.trace  not_sig05.breach.trace  not_sig06.breach.trace  or_sig01_sig02.breach.trace  or_sig03_sig04.breach.trace  sig03.trace  sig04.trace  sig06.trace  until_sig01_sig02.breach.trace  until_sig03_sig04.breach.trace
matlab/util/: init_test_cases.m  writeSignal.m
src/: .cproject  .gitignore  CMakeLists.txt  GNUmakefile  Makefile  and.cu  and.hpp  astnode.hpp  consolidate.cu  consolidate.hpp  globals.h  interpolate.hpp  intersect.hpp  main.cu  not.cu  not.hpp  parse.y  scan.l  sigcmp.cu  sigcmp.hpp  sigpt.c  sigpt.h  stl.h  stlcuda.cu  stlcuda.h  util.c  util.h
src/operators/: CMakeLists.txt  alw.cu  alw.hpp  and.cu  and.hpp  balw.cu  balw.hpp  bevtl.cu  bevtl.hpp  buntil.cu  buntil.hpp  evtl.cu  evtl.hpp  not.cu  not.hpp  or.cu  or.hpp  until.cu  until.hpp  until_seq.cu
src/parser/: CMakeLists.txt
test/: CMakeLists.txt  alw.cu  and.cu  balw.cu  bevtl.cu  buntil.cu  config.h.in  evtl.cu  not.cu  or.cu  sigcmp.c  sigcmp.cu  sigcmp.hpp  until.cu
