cuda_add_library(stl_and and.cu)
target_link_libraries(stl_and consolidate)
cuda_add_library(stl_alw alw.cu)
cuda_add_library(stl_balw balw.cu)
cuda_add_library(stl_bevtl bevtl.cu)
cuda_add_library(stl_buntil buntil.cu)
cuda_add_library(stl_evtl evtl.cu)
cuda_add_library(stl_not not.cu)
cuda_add_library(stl_or or.cu)
target_link_libraries(stl_or stl_and stl_not)
cuda_add_library(stl_until until.cu)
